Cleaning up more from the Dummy Gateway starting point

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "description": "Cardconnect driver for the Omnipay payment processing library",
     "keywords": [
-        "dummy",
+        "cardconnect",
         "gateway",
         "merchant",
         "omnipay",
